# LR6

./: .gitignore  CMakeLists.txt  main.cpp
Task_1/: CMakeLists.txt
Task_1/header-files/: utils.h
Task_1/src/: constants.cpp  funcs.cpp  main.cpp  task1.cpp  utils.cpp
Task_1/src/code/: main.cpp  utils.cpp
Task_1/src/header-files/: constants.h  funcs.h
Task_1/tests/: tests.cpp
Task_2/: CMakeLists.txt
Task_2/header-files/: utils.h
Task_2/src/: main  main.cpp  task2.cpp  utils.cpp
Task_2/src/code/: main.cpp  utils.cpp
Task_2/src/header-files/: utils.h
Task_2/tests/: tests.cpp
Task_3/: CMakeLists.txt
Task_3/header-files/: iofuncs.h
Task_3/src/: a.cpp  comments.cpp  func.cpp  iofuncs.cpp  logic.cpp  main.cpp  task3.cpp
Task_3/src/code/: constants.cpp  iofuncs.cpp  logic.cpp  main.cpp
Task_3/src/header-files/: constants.h  iofuncs.h  logic.h
Task_3/src/works/: b.cpp  c.cpp  eng.cpp  rus.cpp  russian.cpp
Task_3/tests/: tests.cpp
general/code/: utils.cpp
general/header-files/: constants.h  utils.h
